--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"PYTHON_PATH=$(which python) nodemon server/index.js\" \"SERVER_URL=http://localhost:3000 parcel app/index.html\"",
+    "dev": "concurrently \"npm run start:py-server\" \"nodemon server/index.js\" \"SERVER_URL=http://localhost:3000 parcel app/index.html\" ",
     "build": "parcel build app/index.html --out-dir server/public/app",
     "postinstall": "sh postinstall.sh",
-    "start": "PYTHON_PATH=$(which python) node server/index.js"
+    "start:py-server": "export FLASK_APP=server/server.py && flask run",
+    "start:node": "node server/index.js",
+    "start": "concurrently \"npm run start:py-server\" \"npm run start:node\""
   },
   "author": "",
   "license": "ISC",
@@ -19,9 +20,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "fs-extra": "^9.0.1",
+    "moment": "^2.27.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "request-promise": "^4.2.5",
+    "sharp": "^0.25.4",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
